// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils getFileImageSpecFromFilename should compose a sequence, even if sequence not starting by 1 1`] = `
{
  "bin": "Bin1",
  "bulb": "120.0s",
  "bulbMs": 120000,
  "datetime": 2024-07-07T00:23:48.000Z,
  "extension": "fit",
  "fileName": "Light_LDN 1093_120.0s_Bin1_gain100_20240707-002348_-10.0C_0002.fit",
  "filter": null,
  "gain": 100,
  "projectFileDirectory": undefined,
  "projectFilePath": undefined,
  "sequenceId": "20240707-002348",
  "sequencePosition": 2,
  "setName": "Light_120.0s_Bin1_gain100",
  "sourceFileDirectory": "input/bar",
  "sourceFilePath": "input/bar/Light_LDN 1093_120.0s_Bin1_gain100_20240707-002348_-10.0C_0002.fit",
  "temperature": -10,
  "type": "Light",
}
`;

exports[`utils getFileImageSpecFromFilename should compose a sequence, even when sequence is missing a file 1`] = `
{
  "bin": "Bin1",
  "bulb": "120.0s",
  "bulbMs": 120000,
  "datetime": 2024-07-07T00:23:48.000Z,
  "extension": "fit",
  "fileName": "Light_LDN 1093_120.0s_Bin1_gain100_20240707-002348_-10.0C_0003.fit",
  "filter": null,
  "gain": 100,
  "projectFileDirectory": undefined,
  "projectFilePath": undefined,
  "sequenceId": "20240706-010203",
  "sequencePosition": 3,
  "setName": "Light_120.0s_Bin1_gain100",
  "sourceFileDirectory": "input/bar",
  "sourceFilePath": "input/bar/Light_LDN 1093_120.0s_Bin1_gain100_20240707-002348_-10.0C_0003.fit",
  "temperature": -10,
  "type": "Light",
}
`;

exports[`utils getFileImageSpecFromFilename should match snapshot (ASIAIR plan target format) 1`] = `
{
  "bin": "Bin1",
  "bulb": "120.0s",
  "bulbMs": 120000,
  "datetime": 2024-07-07T00:23:48.000Z,
  "extension": "fit",
  "fileName": "Light_LDN 1093_120.0s_Bin1_H_gain100_20240707-002348_-10.0C_0001.fit",
  "filter": "H",
  "gain": 100,
  "projectFileDirectory": undefined,
  "projectFilePath": undefined,
  "sequenceId": "20240707-002348",
  "sequencePosition": 1,
  "setName": "Light_120.0s_Bin1_H_gain100",
  "sourceFileDirectory": "input/bar",
  "sourceFilePath": "input/bar/Light_LDN 1093_120.0s_Bin1_H_gain100_20240707-002348_-10.0C_0001.fit",
  "temperature": -10,
  "type": "Light",
}
`;

exports[`utils getFileImageSpecFromFilename should match snapshot (ASIAIR plan target format) 2`] = `
{
  "bin": "Bin1",
  "bulb": "1.0ms",
  "bulbMs": 1,
  "datetime": 2024-06-24T09:43:04.000Z,
  "extension": "fit",
  "fileName": "Flat_1.0ms_Bin1_S_gain100_20240624-094304_-10.5C_0001.fit",
  "filter": "S",
  "gain": 100,
  "projectFileDirectory": "project/bar/S/Flat_1.0ms_Bin1_S_gain100",
  "projectFilePath": "project/bar/S/Flat_1.0ms_Bin1_S_gain100/Flat_1.0ms_Bin1_S_gain100_20240624-094304_-10.5C_0001.fit",
  "sequenceId": "20240624-094304",
  "sequencePosition": 1,
  "setName": "Flat_1.0ms_Bin1_S_gain100",
  "sourceFileDirectory": "input/bar",
  "sourceFilePath": "input/bar/Flat_1.0ms_Bin1_S_gain100_20240624-094304_-10.5C_0001.fit",
  "temperature": -10.5,
  "type": "Flat",
}
`;

exports[`utils getFileImageSpecFromFilename should match snapshot (ASIAIR plan target format) 3`] = `
{
  "bin": "Bin1",
  "bulb": "60.0s",
  "bulbMs": 60000,
  "datetime": 2024-03-08T15:57:22.000Z,
  "extension": "fit",
  "fileName": "Dark_60.0s_Bin1_gain0_20240308-155722_-10.0C_0001.fit",
  "filter": null,
  "gain": 0,
  "projectFileDirectory": "project/bar/any/Dark_60.0s_Bin1_gain0",
  "projectFilePath": "project/bar/any/Dark_60.0s_Bin1_gain0/Dark_60.0s_Bin1_gain0_20240308-155722_-10.0C_0001.fit",
  "sequenceId": "20240308-155722",
  "sequencePosition": 1,
  "setName": "Dark_60.0s_Bin1_gain0",
  "sourceFileDirectory": "input/bar",
  "sourceFilePath": "input/bar/Dark_60.0s_Bin1_gain0_20240308-155722_-10.0C_0001.fit",
  "temperature": -10,
  "type": "Dark",
}
`;

exports[`utils getFileImageSpecFromFilename should match snapshot (ASIAIR plan target format) 4`] = `
{
  "bin": "Bin1",
  "bulb": "1.0ms",
  "bulbMs": 1,
  "datetime": 2023-09-10T10:11:31.000Z,
  "extension": "fit",
  "fileName": "Bias_1.0ms_Bin1_gain100_20230910-101131_-9.8C_0001.fit",
  "filter": null,
  "gain": 100,
  "projectFileDirectory": "project/bar/any/Bias_1.0ms_Bin1_gain100",
  "projectFilePath": "project/bar/any/Bias_1.0ms_Bin1_gain100/Bias_1.0ms_Bin1_gain100_20230910-101131_-9.8C_0001.fit",
  "sequenceId": "20230910-101131",
  "sequencePosition": 1,
  "setName": "Bias_1.0ms_Bin1_gain100",
  "sourceFileDirectory": "input/bar",
  "sourceFilePath": "input/bar/Bias_1.0ms_Bin1_gain100_20230910-101131_-9.8C_0001.fit",
  "temperature": -9.8,
  "type": "Bias",
}
`;

exports[`utils getFileImageSpecFromFilename should match snapshot (filter named with spaces) 1`] = `
{
  "bin": "Bin1",
  "bulb": "120.0s",
  "bulbMs": 120000,
  "datetime": 2024-07-07T00:23:48.000Z,
  "extension": "fit",
  "fileName": "Light_LDN 1093_120.0s_Bin1_filter h_gain100_20240707-002348_-10.0C_0001.fit",
  "filter": "filterh",
  "gain": 100,
  "projectFileDirectory": undefined,
  "projectFilePath": undefined,
  "sequenceId": "20240707-002348",
  "sequencePosition": 1,
  "setName": "Light_120.0s_Bin1_filterh_gain100",
  "sourceFileDirectory": "input/bar",
  "sourceFilePath": "input/bar/Light_LDN 1093_120.0s_Bin1_filter h_gain100_20240707-002348_-10.0C_0001.fit",
  "temperature": -10,
  "type": "Light",
}
`;

exports[`utils getFileImageSpecFromFilename should match snapshot (no filter) 1`] = `
{
  "bin": "Bin1",
  "bulb": "120.0s",
  "bulbMs": 120000,
  "datetime": 2024-07-07T00:23:48.000Z,
  "extension": "fit",
  "fileName": "Light_LDN 1093_120.0s_Bin1_gain100_20240707-002348_-10.0C_0001.fit",
  "filter": null,
  "gain": 100,
  "projectFileDirectory": undefined,
  "projectFilePath": undefined,
  "sequenceId": "20240707-002348",
  "sequencePosition": 1,
  "setName": "Light_120.0s_Bin1_gain100",
  "sourceFileDirectory": "input/bar",
  "sourceFilePath": "input/bar/Light_LDN 1093_120.0s_Bin1_gain100_20240707-002348_-10.0C_0001.fit",
  "temperature": -10,
  "type": "Light",
}
`;
